Fix dex entry alignment

--- a/src/page/dex/DexSubpage.scss
+++ b/src/page/dex/DexSubpage.scss
@@ -1,6 +1,6 @@
 ol.dex {
     display: grid;
-    justify-content: center;
+    justify-content: left;
     grid-template-columns: repeat(auto-fit, 270px);
     margin: 0;
     padding: 0;
